# 20260228_LC_eval2parquet

./: .gitignore  Cargo.toml  README.md  zobr64_collisions.txt
design/: .gitignore  20260228_parquet_schema.md  20260228_task.md  20260303_rocksdb_schema.md
notebooks/: 01_test_part0.ipynb  02_sort_parquet.ipynb  02_sort_parquet.py  03_test_part0_sorted.ipynb  04_test_all_simplified.ipynb
src/: main.rs
