[package]
name = "lc_eval2parquet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arrow-array = "58.0.0"
arrow-json = "58.0.0"
arrow-schema = "58.0.0"
clap = { version = "4.5.60", features = ["derive"] }
indicatif = "0.18.4"
parquet = { version = "58.0.0", features = ["zstd"] }
zstd = "0.13.3"
