[package]
name = "lc_eval2parquet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arrow-array = "58.0.0"
arrow-json = "58.0.0"
arrow-schema = "58.0.0"
clap = { version = "4.5.60", features = ["derive"] }
datafusion = "52.1.0"
futures = "0.3.32"
indicatif = "0.18.4"
parquet = { version = "58.0.0", features = ["zstd"] }
rocksdb = "0.24.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shakmaty = "0.27.3"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
zstd = "0.13.3"
